--- a/app/styles/punditVariables.less
+++ b/app/styles/punditVariables.less
@@ -7,6 +7,6 @@
 @toolbar-height: 30px;
 
 // Will be used by Toolbar and Dashboard
-@annotation-sidebar-coll-width: 24px;
+@annotation-sidebar-coll-width: 26px;
 @annotation-sidebar-exp-width: 301px;
 @annotation-sidebar-filter-width: 300px;
